--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="md_keylines">16dp</dimen>
     <dimen name="navheader_height">222dp</dimen>
+
+
+    <dimen name="card_height">304dp</dimen>
+    <dimen name="card_image_height">200dp</dimen>
+    <dimen name="card_title_height">40dp</dimen>
+    <dimen name="cards_button_width">48dp</dimen>
+    <dimen name="cards_button_height">48dp</dimen>
+
+
+    <dimen name="article_subheading">16sp</dimen>
 </resources>
