--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,6 @@
     <dimen name="cards_button_width">48dp</dimen>
     <dimen name="cards_button_height">48dp</dimen>
 
-
+    <dimen name="article_headline">24sp</dimen>
     <dimen name="article_subheading">16sp</dimen>
 </resources>
