--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".presentation.activities.DetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -182,5 +184,17 @@
                     android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
+
+        <Button android:text="LLEVAME" android:background="@color/colorPrimaryDark"
+            android:textColor="@color/cardview_light_background"
+            android:paddingLeft="@dimen/md_keylines"
+            android:paddingRight="@dimen/md_keylines"
+            android:onClick="llevar"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_gravity="center|center_vertical"
+            android:gravity="center_horizontal|center_vertical" />
+
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
